fix(ui): tweak contrast

--- a/src/css/module_button.css
+++ b/src/css/module_button.css
@@ -22,7 +22,7 @@ miru-image-editor {
 
     &[disabled] {
       pointer-events: none;
-      opacity: 0.6;
+      opacity: 0.8;
     }
 
     &.miru--small {
